@@ -1,22 +1,14 @@
 package com.MicroservicePractice.OrderService;
 
-import com.MicroservicePractice.OrderService.intercept.RestTemplateInterceptor;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.MicroservicePractice.OrderService.external.intercept.RestTemplateInterceptor;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.cloud.client.loadbalancer.LoadBalanced;
 import org.springframework.cloud.openfeign.EnableFeignClients;
 import org.springframework.context.annotation.Bean;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClientProvider;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClientProviderBuilder;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
-import org.springframework.security.oauth2.client.web.DefaultOAuth2AuthorizedClientManager;
-import org.springframework.security.oauth2.client.web.OAuth2AuthorizedClientRepository;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 @EnableFeignClients
@@ -26,45 +18,11 @@ public class OrderServiceApplication {
 		SpringApplication.run(OrderServiceApplication.class, args);
 	}
 
-    @Autowired
-    private ClientRegistrationRepository clientRegistrationRepository;
-
-    @Autowired
-    private OAuth2AuthorizedClientRepository oAuth2AuthorizedClientRepository;
-
     @Bean
     @LoadBalanced
-    public RestTemplate restTemplate() {
+    public RestTemplate restTemplate(RestTemplateInterceptor interceptor) {
         RestTemplate restTemplate = new RestTemplate();
-        restTemplate.setInterceptors(
-                Arrays.asList(
-                        new RestTemplateInterceptor(
-                                clientManager(clientRegistrationRepository,
-                                        oAuth2AuthorizedClientRepository)
-                        )
-                )
-        );
+        restTemplate.setInterceptors(List.of(interceptor));
         return restTemplate;
     }
-
-    @Bean
-    public OAuth2AuthorizedClientManager clientManager(
-            ClientRegistrationRepository clientRegistrationRepository,
-            OAuth2AuthorizedClientRepository oAuth2AuthorizedClientRepository) {
-        OAuth2AuthorizedClientProvider oAuth2AuthorizedClientPorvider
-                = OAuth2AuthorizedClientProviderBuilder
-                .builder()
-                .clientCredentials()
-                .build();
-
-        DefaultOAuth2AuthorizedClientManager oAuth2AuthorizedClientManager
-                = new DefaultOAuth2AuthorizedClientManager(
-                        clientRegistrationRepository,
-                oAuth2AuthorizedClientRepository);
-        oAuth2AuthorizedClientManager.setAuthorizedClientProvider(
-                oAuth2AuthorizedClientPorvider
-        );
-        return oAuth2AuthorizedClientManager;
-    }
-
 }
